--- a/main.html
+++ b/main.html
@@ -8,6 +8,28 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<form action="submit-feedback.php" method="POST">
+  <h2>Feedback Form</h2>
+  
+  <label for="name">Name:</label>
+  <input type="text" id="name" name="name" minlength="3" maxlength="50" required>
+  
+  <label for="portfolio">Portfolio:</label>
+  <input type="url" id="portfolio" name="portfolio" required>
+  
+  <label for="favColor">Favorite color:</label>
+  <select id="favColor" name="favColor">
+    <option value="red">Red</option>
+    <option value="green">Green</option>
+    <option value="blue">Blue</option>
+    <option value="yellow">Yellow</option>
+  </select>
+  
+  <label for="likeness">How much do you like this color?</label>
+  <input type="range" id="likeness" name="likeness" min="1" max="100" required>
+  
+  <button type="submit">Submit</button>
+</form>
     <script type="text/javascript" src="./script.js">
 </script>
 
