--- a/main.html
+++ b/main.html
@@ -11,13 +11,13 @@
 	<form action="submit-feedback.php" method="POST">
   <h2>Feedback Form</h2>
   
-  <label for="name">Name:</label>
+  <label for="name">Name</label>
   <input type="text" id="name" name="name" minlength="3" maxlength="50" required>
   
-  <label for="portfolio">Portfolio:</label>
+  <label for="portfolio">Portfolio</label>
   <input type="url" id="portfolio" name="portfolio" required>
   
-  <label for="favColor">Favorite color:</label>
+  <label for="favColor">Favorite color</label>
   <select id="favColor" name="favColor">
     <option value="red">Red</option>
     <option value="green">Green</option>
