--- a/main.html
+++ b/main.html
@@ -18,7 +18,7 @@
   <input type="url" id="portfolio" name="portfolio" required>
   
   <label for="favColor">Favorite color</label>
-  <select id="favColor" name="favColor">
+  <input type="color" id="favColor" name="favColor" required>
     <option value="red">Red</option>
     <option value="green">Green</option>
     <option value="blue">Blue</option>
